--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.2.3
+certifi==2019.11.28
+chardet==3.0.4
 Django==3.0.3
 django-crispy-forms==1.8.1
+idna==2.9
 pytz==2019.3
+requests==2.23.0
 sqlparse==0.3.0
+stripe==2.43.0
+urllib3==1.25.8
