--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ chardet==3.0.4
 Django==3.0.3
 django-crispy-forms==1.8.1
 idna==2.9
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.23.0
+six==1.14.0
 sqlparse==0.3.0
 stripe==2.43.0
 urllib3==1.25.8
