--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 asgiref==3.2.3
+boto3==1.12.25
+botocore==1.15.25
 certifi==2019.11.28
 chardet==3.0.4
 Django==3.0.3
 django-crispy-forms==1.8.1
+django-storages==1.9.1
+docutils==0.15.2
 idna==2.9
+jmespath==0.9.5
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.23.0
+s3transfer==0.3.3
 six==1.14.0
 sqlparse==0.3.0
 stripe==2.43.0
