--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ boto3==1.12.25
 botocore==1.15.25
 certifi==2019.11.28
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==3.0.3
 django-crispy-forms==1.8.1
 django-storages==1.9.1
 docutils==0.15.2
+gunicorn==20.0.4
 idna==2.9
 jmespath==0.9.5
+psycopg2==2.8.4
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.23.0
